Add uwsgi, openapi. change document path
