# app/focus_config.py
@@ -6,7 +6,7 @@ FOCUS_CERTIFICATE = os.getenv("FOCUS_CERTIFICATE", False)
 FOCUS_USERNAME = os.getenv("FOCUS_USERNAME")
 FOCUS_PASSWORD = os.getenv("FOCUS_PASSWORD")
 
-FOCUS_DOCUMENT_PATH = "wpi/aanvraag/document"
+FOCUS_DOCUMENT_PATH = "wpi/document"
 
 FOCUS_PRODUCTS_ALLOWED = ["Levensonderhoud", "Stadspas"]
 FOCUS_PRODUCT_GROUPS_ALLOWED = ["Minimafonds", "Participatiewet"]
