# app/openapi.yml
@@ -4,51 +4,31 @@ info:
   description: Koppel api tussen WPI (Focus) en Mijn Amsterdam
   version: 2.0.0
 paths:
-  /focus/aanvragen:
+  /status/health:
     get:
-      parameters:
-        - name: x-saml-attribute-token1
-          in: header
-          description: TMA encoded BSN
-          required: true
-          schema:
-            type: string
-      description:
-        Alle lopende en afgehandelde aanvragen voor een bepaalde persoon
-        geidentificeerd door een BSN nummer
+      description: returns "OK" if api is running
       responses:
         "200":
-          description: |
-            Lopende en Afgeronde Aanvragen
-
-            De processtappen per product zijn:
-            -- aanvraag
-            -- inBehandeling
-            -- herstelTermijn
-            -- beslissing
-            -- bezwaar
-
-            Als er geen data beschikbaar is voor een bepaalde processtap is de waarde null
-
-            Alle data die wordt ontvangen uit de focus API worden door de API geretourneerd
-
-            Er worden in de API tevens een aantal attributen toegevoegd aan het originele bericht uit de focus API.
-
-            _id
-            Aanvragen worden gekenmerkt door een soort product, bv Participatiewet en productnaam, bv Levensonderhoud
-            Dit komt terug in de _id, bv 0-1 welke een combinatie is van de index van het soort product (0) en het product (1)
-
-            Bij een processtap is de _id de index van de processtap op volgorde zoals bovenstaand bij processtappen is toegelicht.
-
+          description: Returns "OK"
+          content:
+            application/json:
+              schema:
+                type: string
+                enum:
+                  - "OK"
+  /wpi/aanvragen:
+    get:
+      description: Returns a list aanvragen.
+      responses:
+        "200":
+          description: OK
           content:
             application/json:
               schema:
                 type: object
                 properties:
                   content:
-                    type: array
-                    items:
-                      $ref: "#/components/schemas/Aanvraag"
+                    $ref: "#/components/schemas/Aanvragen"
                   status:
                     type: string
                     enum:
@@ -59,7 +39,7 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/ErrorResponse"
-  /focus/document:
+  /wpi/document:
     get:
       description: Geeft een bij een aanvraag behorend document terug voor een bepaalde persoon geidentificeerd door een BSN nummer
       parameters:
@@ -114,74 +94,8 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/ErrorResponse"
-  /status/health:
-    get:
-      summary: returns "OK"
-      responses:
-        "200":
-          description: Returns "OK"
-          content:
-            application/json:
-              schema:
-                type: string
-                enum:
-                  - "OK"
-  /focus/combined:
-    get:
-      parameters:
-        - name: x-saml-attribute-token1
-          in: header
-          description: TMA encoded BSN
-          required: true
-          schema:
-            type: string
-      responses:
-        "200":
-          description: a combination of several data sources
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  content:
-                    type: object
-                    properties:
-                      jaaropgaven:
-                        type: array
-                        items:
-                          $ref: "#/components/schemas/Jaaropgave"
-                      stadspassaldo:
-                        type: object
-                        properties:
-                          type:
-                            type: string
-                            enum:
-                              - hoofpashouder
-                              - partner
-                              - kind
-                          stadspassen:
-                            type: array
-                            items:
-                              $ref: "#/components/schemas/Stadspas"
-                      tozodocumenten:
-                        type: array
-                        items:
-                          $ref: "#/components/schemas/Document"
-                      uitkeringsspecificaties:
-                        type: array
-                        items:
-                          $ref: "#/components/schemas/Uitkeringsspecificatie"
-                  status:
-                    type: string
-                    enum:
-                      - "OK"
-        default:
-          description: Unexpected error
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/ErrorResponse"
-  /focus/stadspastransacties/{encrypted_admin_pasnummer}:
+  
+  /wpi/stadspas/transacties/{encrypted_admin_pasnummer}:
     get:
       parameters:
         - name: x-saml-attribute-token1
@@ -218,68 +132,154 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/ErrorResponse"
+
+  /wpi/bijstanduitkering/specificaties-en-jaaropgaven:
+    get:
+      description: Returns a list uitkeringsspecificatie en jaaropgaven.
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  content:
+                    type: array
+                    items:
+                      $ref: "#/components/schemas/Uitkeringsspecificatie"
+                  status:
+                    type: string
+                    enum:
+                      - "OK"
+        default:
+          description: Unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
+
 components:
   schemas:
+    Aanvragen:
+      type: array
+      items:
+        anyOf:
+          - $ref: "#/components/schemas/BijstandsuitkeringAanvraag"
+          - $ref: "#/components/schemas/StadspasAanvraag"
     Aanvraag:
       type: object
       properties:
-        _id:
+        title:
           type: string
-        dienstverleningstermijn:
-          type: integer
-        inspanningsperiode:
-          type: integer
-        naam:
-          type: string
-          enum:
-            - Levensonderhoud
-            - Stadspas
-        typeBesluit:
-          type: string
-        soortProduct:
-          type: string
-          enum:
-            - Participatiewet
-            - Minimafonds
-        processtappen:
-          type: object
-          properties:
-            aanvraag:
-              $ref: "#/components/schemas/AanvraagProcesStap"
-            beslissing:
-              $ref: "#/components/schemas/AanvraagProcesStap"
-            bezwaar:
-              $ref: "#/components/schemas/AanvraagProcesStap"
-            herstelTermijn:
-              $ref: "#/components/schemas/AanvraagProcesStap"
-            inBehandeling:
-              $ref: "#/components/schemas/AanvraagProcesStap"
-    AanvraagProcesStap:
-      type: object
-      nullable: true
-      properties:
-        _id:
-          type: string
-        datum:
-          type: string
-          format: date-time
-        reden:
-          type: string
-        document:
+        dateEnd:
+          $ref: "#/components/schemas/Date"
+        dateStart:
+          $ref: "#/components/schemas/Date"
+        steps:
+          type: array
           items:
-            $ref: "#/components/schemas/AanvraagProcesStapDocumentReferentie"
-    AanvraagProcesStapDocumentReferentie:
+            anyOf:
+              - $ref: "#/components/schemas/AanvraagStepRequest"
+              - $ref: "#/components/schemas/AanvraagStepActive"
+              - $ref: "#/components/schemas/AanvraagStepAdditionalInfo"
+              - $ref: "#/components/schemas/AanvraagStepDecision"
+    AanvraagStepStatus:
+      type: object
       properties:
-        $ref:
+        id: 
           type: string
+        title:
+          type: string
+        datePublished:
+          $ref: "#/components/schemas/Date"
+        documents:
+          type: array
+          items:
+            $ref: "#/components/schemas/Document"
+    AanvraagStepRequest:
+      allOf:
+        - $ref: "#/components/schemas/AanvraagStepStatus"
+        - type: object
+          properties:
+            id:
+              type: string
+              enum:
+                - aanvraag
+    AanvraagStepActive:
+      allOf:
+        - $ref: "#/components/schemas/AanvraagStepStatus"
+        - type: object
+          properties:
+            id:
+              type: string
+              enum:
+                - inBehandeling
+            dateDecisionExpected:
+              $ref: "#/components/schemas/Date"
+    AanvraagStepAdditionalInfo:
+      allOf:
+        - $ref: "#/components/schemas/AanvraagStepStatus"
+        - type: object
+          properties:
+            id:
+              type: string
+              enum:
+                - herstelTermijn
+            dateDecisionExpected:
+              $ref: "#/components/schemas/Date"
+            dateUserFeedbackExpected:
+              $ref: "#/components/schemas/Date"
+    AanvraagStepDecision:
+      allOf:
+        - $ref: "#/components/schemas/AanvraagStepStatus"
+        - type: object
+          properties:
+            id:
+              type: string
+              enum:
+                - besluit
+            decision:
+              type: string
+              example: Toegekend, Afgewezen
+    BijstandsuitkeringAanvraag:
+      allOf:
+        - $ref: "#/components/schemas/Aanvraag"
+        - type: object
+          properties:
+            title:
+              enum:
+                - Bijstandsuitkering
+    StadspasAanvraag:
+      allOf:
+        - $ref: "#/components/schemas/Aanvraag"
+        - type: object
+          properties:
+            title:
+              enum:
+                - Stadspas
+    Document:
+      type: object
+      properties:
         id:
           type: string
-        isBulk:
-          type: boolean
-        isDms:
-          type: boolean
-        omschrijving:
+        title:
           type: string
+        url:
+          type: string
+          example: "/wpi/document?id=95330222&isBulk=false&isDms=false"
+        datePublished:
+          $ref: "#/components/schemas/Date"
+    Uitkeringsspecificatie:
+      allOf:
+        - $ref: "#/components/schemas/Document"
+        - type: object
+          properties:
+            title:
+              enum:
+                - A
+                - B
+                - C
     StadspasTransaction:
       type: object
       properties:
@@ -289,32 +289,18 @@ components:
           type: string
         amount:
           type: number
-        date:
-          $ref: "#/components/schemas/Date"
-    Jaaropgave:
-      type: object
-      properties:
         datePublished:
-          type: string
-          format: date
-          example: "2019-04-19"
-        id:
-          type: string
-        title:
-          type: string
-        url:
-          type: string
-          example: "focus/document?id=95330222&isBulk=false&isDms=false"
+          $ref: "#/components/schemas/DateTime"
     Stadspas:
       type: object
       properties:
-        datumAfloop:
-          $ref: "#/components/schemas/DateTime"
         id:
-          type: number
-        naam:
           type: string
-        pasnummer:
+        dateEnd:
+          $ref: "#/components/schemas/DateTime"
+        passNumber:
+          type: string
+        owner:
           type: string
         budgets:
           type: array
@@ -323,9 +309,9 @@ components:
     StadspasBudget:
       type: object
       properties:
-        assigned:
+        budgetAssigned:
           type: number
-        balance:
+        budgetBalance:
           type: number
         code:
           type: string
@@ -334,57 +320,18 @@ components:
         urlTransactions:
           type: string
           description: optional url to get the stadspas transactions
-          example: "/api/focus/stadspastransacties/{encrypted_admin_pasnummer}"
-        datumAfloop:
+          example: "/wpi/stadspas/transacties/{encrypted_admin_pasnummer}"
+        dateEnd:
           $ref: "#/components/schemas/DateTime"
-    Document:
-      type: object
-      properties:
-        datePublished:
-          $ref: "#/components/schemas/Date"
-        description:
-          type: string
-        id:
-          type: string
-        documentCodeId:
-          type: string
-        type:
-          type: string
-        url:
-          type: string
-          example: "focus/document?id=95330222&isBulk=false&isDms=false"
-    Uitkeringsspecificatie:
-      type: object
-      properties:
-        datePublished:
-          $ref: "#/components/schemas/Date"
-        id:
-          type: string
-        title:
-          type: string
-        url:
-          type: string
-          example: "focus/document?id=95330222&isBulk=false&isDms=false"
     Date:
       type: string
       format: date
       example: "2020-06-16"
       nullable: true
-    Time:
-      type: string
-      example: "10:15"
-      nullable: true
     DateTime:
       type: string
       format: date-time
       example: "2020-06-08T00:00:00"
-      nullable: true
-    Kenteken:
-      type: string
-      example: "aa-11-aa"
-      nullable: true
-    Location:
-      type: string
       nullable: true
     ErrorResponse:
       type: object
